# add-msg-issue-prefix-hook

./: .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg
add_msg_issue_prefix_hook/: __init__.py  add_msg_issue_prefix.py  test_add_msg_issue_prefix.py
add_msg_issue_suffix_hook/: add_msg_issue_suffix.py
msg_prefix_hook/: issue_prefix.py
stgo_hooks/: add_msg_issue_prefix.py
tests/: test_add_msg_issue_prefix.py
