[tool.poetry]
name = "add_msg_issue_suffix_hook"
version = "v0.1.0"
description = "Commit hook appending message using branch name"
authors = ["Ricardo Jesus"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.0.0"

[tool.poetry.scripts]
add-msg-issue-suffix = "add_msg_issue_suffix_hook.add_msg_issue_suffix:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
