[tool.poetry]
name = "issue_prefix_hook"
version = "v0.0.4"
description = "Commit hook preparing message using branch name"
authors = ["Gastón Avila <avila.gas@gmail.com>", "Robert DeRienzo <rderienzo@voloridge.com"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.0.0"

[tool.poetry.scripts]
add-msg-issue-prefix = "msg_prefix_hook.issue_prefix:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
