[metadata]
name = issue_prefix_hook
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RobertLD/add-msg-issue-prefix-hook
author = Robert DeRienzo
author_email = rderienzo@voloridge.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.5.1

[options.entry_points]
console_scripts =
    add-msg-issue-prefix = msg_prefix_hook.issue_prefix:main

[options.packages.find]
exclude =
    tests*
    testing*
